--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.main.allow-bean-definition-overriding=true
+
+
+jwt.secret=my-secret-key-1234567890
+jwt.expiration=86400000
