--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 
  
+spring.application.name=demo
+server.port=9001
 
- # ======================
 spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
@@ -16,8 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.main.allow-bean-definition-overriding=true
-
-
-jwt.secret=my-secret-key-1234567890
+jwt.secret=my-secret-key-12345678901234567890
 jwt.expiration=86400000
