--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        
+        <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.1.0</version> <!-- Use latest compatible version -->
+</dependency>
+
 
         <!-- JWT -->
         <dependency>
