--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,11 @@ server.forward-headers-strategy=framework
 spring.application.name=demo
 server.port=9001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-jwt.secret=my-secret-key-12345678901234567890
-jwt.expiration=86400000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
