--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.forward-headers-strategy=framework
  
 spring.application.name=demo
 server.port=9001
+server.forward-headers-strategy=framework
 
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
@@ -16,8 +17,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 jwt.secret=yourSuperSecretKey12345
 jwt.expiration=3600000
+
 
 
  
