--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.forward-headers-strategy=framework
 
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=yourpassword
+spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
