--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,19 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
- 
-spring.application.name=demo
-server.port=9001
-server.forward-headers-strategy=framework
-
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Optional: Hibernate will auto-detect dialect, no need to specify
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jwt.secret=yourSuperSecretKey12345
 jwt.expiration=3600000
+
 
 
 
