--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,13 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
+spring.datasource.url=jdbc:mysql://localhost:3306/your_db_name
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=your_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret=yourSuperSecretKey12345
-jwt.expiration=3600000
 
 
 
