--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,21 @@ spring.application.name=demo
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
+   
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/your_db_name
+
+spring.application.name=demo
+# Don't change the port
+server.port = 9001
+# for https
+spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true  
 
 
 
