--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 9001
 # for https
 spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Yes
+spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
