--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.application.name=demo
 # Don't change the port
 server.port = 9001
 # for https
-spring.datasource.url=jdbc:mysql://localhost:3306/transport?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+  
+spring.datasource.url=jdbc:mysql://localhost:3307/demo_db
+spring.datasource.username=demo
+spring.datasource.password=demo123
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true  
+spring.jpa.open-in-view=false
 
 
 
