--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,34 @@
-spring.application.name=demo
-# Don't change the port
-server.port = 9001
-# for https
-  
-spring.datasource.url=jdbc:mysql://localhost:3307/demo_db
-spring.datasource.username=demo
-spring.datasource.password=demo123
+# ===============================
+# Server Configuration
+# ===============================
+server.port=8080
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# ===============================
+# Datasource Configuration (MariaDB)
+# ===============================
+spring.datasource.url=jdbc:mariadb://localhost:3307/test
+spring.datasource.username=coder
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.format_sql=true
 
+# ===============================
+# Connection Pool (Hikari)
+# ===============================
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=HikariPool
 
-
-
-
- 
+# ===============================
+# Logging (optional but helpful)
+# ===============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
