--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-# ===============================
-# MYSQL DATASOURCE
-# ===============================
+spring.application.name=demo
+# Don't change the port
+server.port = 9001
+# for https
+
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Amypo
-
+spring.datasource.password=YOUR_MYSQL_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# ===============================
-# JPA / HIBERNATE
-# ===============================
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
